--- a/elastobond.html
+++ b/elastobond.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
@@ -20,7 +20,8 @@
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
                 <a class="logo" href="index.html">
-                    <h1>PHEONIX CHEMICALS</h1>
+                    <img src="images/logo.jpeg" class="responsive">
+                    <h1>PHOENIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                     <span class="navbar-toggler-icon"></span>
@@ -193,6 +194,10 @@
             </div>
 
         </div>
+        <div class="downloadsection">
+            <p>Click the link below to download the technical sheet</p>
+            <a href="docs/ElastoBond.pdf" download>Click here</a>
+        </div>
     </div>
     <!--Products details section ends-->
     <!--======================================================================-->
@@ -224,8 +229,8 @@
             </div>
             <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
                 <a href="elastowhite.html">
-                    <div class="box" data-name="elastobond">
-                        <h4>Elastowhite</h4>
+                    <div class="box" data-name="elastowhite">
+                        <h4>ElastoWhite</h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                     </div>
                 </a>
@@ -251,28 +256,28 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 footer-contact">
+                    <div class="col-lg-6 col-md-6 footer-contact">
                         <h3>Pheonix Chemicals</h3><br><br>
                         <p>
-                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, ArKhej, Ahmedabad, Gujarat
+                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, Sarkhej, Ahmedabad, Gujrat
                             <br>
                             <i class="fa-solid fa-phone"><strong>:</strong></i> +91-7906830840<br>
                             <i class="fa-solid fa-envelope"><strong>:</strong></i> pheonixchemicals.in@gmail.com<br>
                         </p>
                     </div>
-                    <div class="col-lg-4 col-md-6 footer-links">
+
+                    <div class="col-lg-6 col-md-6 footer-links">
                         <h4>Our Products</h4>
                         <ul>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Penetrative Chemicals</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic Polymer</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic heatproofing Chemicals</a>
-                            </li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Hybrid Pu & Bituminous Chemicals</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">polyurethane Based Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Penetrative Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Acrylic Polymer</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Acrylic Heatproofing Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Hybrid PU & Bituminous Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Polyurethane Based Chemicals</a></li>
                         </ul>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 footer-links">
+                    <!--<div class="col-lg-4 col-md-6 footer-links">
                         <h4>Our Social Networks</h4>
                         <p>You can reach out us on various platforms.</p>
                         <div class="social-links mt-3">
@@ -282,7 +287,7 @@
                             <a href="#" class="google-plus"><i class="fa-brands fa-skype"></i></a>
                             <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
