--- a/elastowhite.html
+++ b/elastowhite.html
@@ -20,7 +20,8 @@
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
                 <a class="logo" href="index.html">
-                    <h1>PHEONIX CHEMICALS</h1>
+                    <img src="images/logo.jpeg" class="responsive">
+                    <h1>PHOENIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                     <span class="navbar-toggler-icon"></span>
@@ -232,6 +233,10 @@
             </div>
 
         </div>
+        <div class="downloadsection">
+            <p>Click the link below to download the technical sheet</p>
+            <a href="docs/ElastoWhite.pdf" download>Click here</a>
+        </div>
     </div>
     <!--Products details section ends-->
     <!--======================================================================-->
@@ -293,28 +298,28 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 footer-contact">
+                    <div class="col-lg-6 col-md-6 footer-contact">
                         <h3>Pheonix Chemicals</h3><br><br>
                         <p>
-                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, ArKhej, Ahmedabad, Gujarat
+                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, Sarkhej, Ahmedabad, Gujrat
                             <br>
                             <i class="fa-solid fa-phone"><strong>:</strong></i> +91-7906830840<br>
                             <i class="fa-solid fa-envelope"><strong>:</strong></i> pheonixchemicals.in@gmail.com<br>
                         </p>
                     </div>
-                    <div class="col-lg-4 col-md-6 footer-links">
+
+                    <div class="col-lg-6 col-md-6 footer-links">
                         <h4>Our Products</h4>
                         <ul>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Penetrative Chemicals</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic Polymer</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic heatproofing Chemicals</a>
-                            </li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Hybrid Pu & Bituminous Chemicals</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">polyurethane Based Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Penetrative Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Acrylic Polymer</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Acrylic Heatproofing Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Hybrid PU & Bituminous Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Polyurethane Based Chemicals</a></li>
                         </ul>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 footer-links">
+                    <!--<div class="col-lg-4 col-md-6 footer-links">
                         <h4>Our Social Networks</h4>
                         <p>You can reach out us on various platforms.</p>
                         <div class="social-links mt-3">
@@ -324,7 +329,7 @@
                             <a href="#" class="google-plus"><i class="fa-brands fa-skype"></i></a>
                             <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
