--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,8 @@
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
                 <a class="logo" href="index.html">
-                    <h1>PHEONIX CHEMICALS</h1>
+                    <img src="images/logo.jpeg" class="responsive">
+                    <h1>PHOENIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                     <span class="navbar-toggler-icon"></span>
@@ -59,7 +60,7 @@
                         <div class="address">
                             <i class="fa-solid fa-location-dot"></i>
                             <h4>Location:</h4>
-                            <p>B21, ArKhej, Ahmedabad, Gujarat</p>
+                            <p>B21, SarKhej, Ahmedabad, Gujrat</p>
                         </div>
                         <div class="phone">
                             <i class="fa-solid fa-phone"></i>
@@ -81,9 +82,13 @@
                                 <input type="text" required autofocus name="name" class="form-control">
                             </div>
                             <div class="form-group col-md-6">
-                                <label for="email">Your Email:</label>
-                                <input type="email" name="email" required class="form-control">
+                                <label for="phone">Contact No:</label>
+                                <input type="tel" name="phone" required class="form-control">
                             </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Your Email:</label>
+                            <input type="email" name="email" required class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="subject">Subject:</label>
@@ -109,29 +114,28 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 footer-contact">
+                    <div class="col-lg-6 col-md-6 footer-contact">
                         <h3>Pheonix Chemicals</h3><br><br>
                         <p>
-                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, ArKhej, Ahmedabad, Gujarat
+                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, Sarkhej, Ahmedabad, Gujrat
                             <br>
                             <i class="fa-solid fa-phone"><strong>:</strong></i> +91-7906830840<br>
                             <i class="fa-solid fa-envelope"><strong>:</strong></i> pheonixchemicals.in@gmail.com<br>
                         </p>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 footer-links">
+                    <div class="col-lg-6 col-md-6 footer-links">
                         <h4>Our Products</h4>
                         <ul>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Penetrative Chemicals</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic Polymer</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic heatproofing Chemicals</a>
-                            </li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Hybrid Pu & Bituminous Chemicals</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">polyurethane Based Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Penetrative Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Acrylic Polymer</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Acrylic Heatproofing Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Hybrid PU & Bituminous Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Polyurethane Based Chemicals</a></li>
                         </ul>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 footer-links">
+                    <!--<div class="col-lg-4 col-md-6 footer-links">
                         <h4>Our Social Networks</h4>
                         <p>You can reach out us on various platforms.</p>
                         <div class="social-links mt-3">
@@ -141,7 +145,7 @@
                             <a href="#" class="google-plus"><i class="fa-brands fa-skype"></i></a>
                             <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
