--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
                 <a class="logo" href="index.html">
-                    <h1>PHEONIX CHEMICALS</h1>
+                    <img src="images/logo.jpeg" class="responsive">
+                    <h1>PHOENIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                     <span class="navbar-toggler-icon"></span>
@@ -121,9 +122,9 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                    <a href="elastobond.html">
-                        <div class="box" data-name="elastobond">
-                            <h4>Elastowhite</h4>
+                    <a href="elastowhite.html">
+                        <div class="box" data-name="elastowhite">
+                            <h4>ElastoWhite</h4>
                             <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                         </div>
                     </a>
@@ -144,29 +145,28 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 footer-contact">
+                    <div class="col-lg-6 col-md-6 footer-contact">
                         <h3>Pheonix Chemicals</h3><br><br>
                         <p>
-                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, ArKhej, Ahmedabad, Gujarat
+                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, Sarkhej, Ahmedabad, Gujrat
                             <br>
                             <i class="fa-solid fa-phone"><strong>:</strong></i> +91-7906830840<br>
                             <i class="fa-solid fa-envelope"><strong>:</strong></i> pheonixchemicals.in@gmail.com<br>
                         </p>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 footer-links">
+                    <div class="col-lg-6 col-md-6 footer-links">
                         <h4>Our Products</h4>
                         <ul>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Penetrative Chemicals</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic Polymer</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic heatproofing Chemicals</a>
-                            </li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">Hybrid Pu & Bituminous Chemicals</a></li>
-                            <li><i class="fas fa-caret-right"></i> <a href="#">polyurethane Based Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Penetrative Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Acrylic Polymer</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Acrylic Heatproofing Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Hybrid PU & Bituminous Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="index.html">Polyurethane Based Chemicals</a></li>
                         </ul>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 footer-links">
+                    <!--<div class="col-lg-4 col-md-6 footer-links">
                         <h4>Our Social Networks</h4>
                         <p>You can reach out us on various platforms.</p>
                         <div class="social-links mt-3">
@@ -176,7 +176,7 @@
                             <a href="#" class="google-plus"><i class="fa-brands fa-skype"></i></a>
                             <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -193,8 +193,8 @@
 
     </div>
     <!-- design section send -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
