--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                         <div class="address">
                             <i class="fa-solid fa-location-dot"></i>
                             <h4>Location:</h4>
-                            <p>B21, SarKhej, Ahmedabad, Gujrat</p>
+                            <p>B21, Sarkhej, Ahmedabad, Gujrat</p>
                         </div>
                         <div class="phone">
                             <i class="fa-solid fa-phone"></i>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="col-lg-7 mt-5 d-flex align-items-stretch">
-                    <form action="#" method="post" class="contact-form">
+                    <form action="https://formspree.io/f/xpzewlvk" method="post" class="contact-form">
                         <div class="row">
                             <div class="form-group col-md-6">
                                 <label for="name">Your Name:</label>
